--- a/README.Rmd
+++ b/README.Rmd
@@ -1,3 +1,3 @@
 >
-- **# This can be very good showing what ancestry is. And the author is really want to give us the concept of what the ancestry really is. I am very love the author's attitude about reseach.**
+- # **This can be very good showing what ancestry is. And the author is really want to give us the concept of what the ancestry really is. I am very love the author's attitude about reseach.**
 
